advanced_SVD/phase2.ipynb - update code Surprise SVD++

--- a/advanced_SVD/phase2.ipynb
+++ b/advanced_SVD/phase2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "969f5269",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "247d87a7",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "361cb739",
    "metadata": {},
    "outputs": [
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a1333ee7",
    "metadata": {},
    "outputs": [],
@@ -978,13 +978,13 @@
     "test_df_pp = test_df[test_df['movieId'].isin(train_movie_ids)].copy()\n",
     "\n",
     "# Cập nhật lại movie_idx sau khi lọc\n",
-    "val_df_pp['movie_idx'] = movie_encoder.transform(val_df['movieId'])\n",
-    "test_df_pp['movie_idx'] = movie_encoder.transform(test_df['movieId'])"
+    "val_df_pp['movie_idx'] = movie_encoder.transform(val_df_pp['movieId'])\n",
+    "test_df_pp['movie_idx'] = movie_encoder.transform(test_df_pp['movieId'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1c78a947",
    "metadata": {},
    "outputs": [],
@@ -1031,12 +1031,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "11823ff8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === XỬ LÝ RATINGS ===\n",
+    "# CÁC PHIM NGƯỜI DÙNG ĐÃ RATING (lấy 20 phim phổ biến nhất)\n",
     "\n",
     "implicit_feedback = defaultdict(set)\n",
     "\n",
@@ -1086,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "43550aa1",
    "metadata": {},
    "outputs": [],
@@ -1110,6 +1111,14 @@
     "\n",
     "# Cách 2: Có thể thay bằng lấy ngẫu nhiên 20 tag mỗi user \n",
     "# tags_sampled = tags_filtered.groupby('user_idx').sample(n=20, replace=False)\n",
+    "\n",
+    "# Cách 3. Lọc theo user_idx, lấy movie_idx mà user_idx có tag, không có rating\n",
+    "# rated_pairs = set(zip(train_df['user_idx'], train_df['movie_idx'])) # user_idx và movie_idx đã rating\n",
+    "# # Giữ lại những dòng tag mà (user_idx, movie_idx) chưa từng xuất hiện trong ratings\n",
+    "# tags_no_rating = tags_filtered[~tags_filtered[['user_idx', 'movie_idx']].apply(tuple, axis=1).isin(rated_pairs)]\n",
+    "# # Giữ tối đa 20 tag cho mỗi user\n",
+    "# tags_sampled = tags_no_rating.groupby('user_idx').head(20)\n",
+    "\n",
     "\n",
     "# Cập nhật implicit_feedback_sampled bằng cách thêm các item từ tags\n",
     "for row in tags_sampled.itertuples():\n",
@@ -1341,67 +1350,52 @@
    "id": "c647d7de",
    "metadata": {},
    "source": [
-    "##### **2.1. Tạo data train/test**"
+    "##### **2.1. Xử lí data train**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "f1604b99",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Số lượng tương tác thêm vào từ implicit feedback: 16648\n",
+      "Kích thước train_df gốc: 20250076 -> sau khi thêm: 20266724\n"
+     ]
+    }
+   ],
    "source": [
-    "# Tạo bộ mã hóa mới cho movieId thành chỉ số liên tục\n",
-    "all_movies = pd.concat([df['movieId'], tags['movieId']])\n",
+    "# Tạo tập các cặp đã có trong train_df\n",
+    "rated_pairs = set(zip(train_df['user_idx'], train_df['movie_idx']))\n",
     "\n",
-    "movie_rating_tag_encoder = LabelEncoder()\n",
-    "movie_rating_tag_encoder.fit(all_movies)\n",
+    "# Tính trung bình rating theo user\n",
+    "user_mean_rating = train_df.groupby('user_idx')['rating'].mean().to_dict()\n",
     "\n",
-    "df['movie_idx'] = movie_rating_tag_encoder.transform(df['movieId'])\n",
-    "tags['movie_idx'] = movie_rating_tag_encoder.transform(tags['movieId'])\n",
+    "# Danh sách lưu dòng mới\n",
+    "additional_rows = []\n",
     "\n",
-    "train_df_, val_df_, test_df_ = train_val_test_plit(df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5026d42d",
-   "metadata": {},
-   "source": [
-    "Thêm các movies được users gắn tag vào tập train để được hiểu là một phần của tập implicit với giá trị rating trung bình của khoảng (0.5, 5.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e64afc7b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Lọc tags: chỉ giữ lại user_idx có trong train_df\n",
-    "valid_user_ids = set(train_df_['userId'])\n",
-    "tags = tags[tags['userId'].isin(valid_user_ids)]\n",
+    "for user_idx, movie_idxs in implicit_feedback_sampled.items():\n",
+    "    for movie_idx in movie_idxs:\n",
+    "        if (user_idx, movie_idx) not in rated_pairs:\n",
+    "            avg_rating = user_mean_rating.get(user_idx, 3.0)  # fallback = 3.0 nếu không có\n",
+    "            additional_rows.append({\n",
+    "                'user_idx': user_idx,\n",
+    "                'movie_idx': movie_idx,\n",
+    "                'rating': avg_rating\n",
+    "            })\n",
     "\n",
-    "# Mã hóa userId của bộ dữ liệu `tag`\n",
-    "tags['user_idx'] = user_encoder.transform(tags['userId'])\n",
+    "# Chuyển thành DataFrame\n",
+    "additional_df = pd.DataFrame(additional_rows)\n",
     "\n",
-    "# Tạo các cặp từ train_df và tags\n",
-    "train_pairs = set(zip(train_df_['user_idx'], train_df_['movie_idx']))\n",
-    "tagged_pairs = set(zip(tags['user_idx'], tags['movie_idx']))\n",
+    "# Nối vào train_df\n",
+    "train_tags_df = pd.concat([train_df, additional_df], ignore_index=True)\n",
     "\n",
-    "# Gộp cả rating lẫn tag (giả sử tag là 1 dạng feedback gián tiếp)\n",
-    "combined_pairs = train_pairs.union(tagged_pairs)\n",
-    " \n",
-    "# Tập đánh giá rõ ràng (có rating)\n",
-    "explicit_df = train_df_[['user_idx', 'movie_idx', 'rating']]\n",
-    "\n",
-    "# Các cặp chỉ có tag, chưa từng rating -> gán rating giả định\n",
-    "tag_only_pairs = tagged_pairs - train_pairs\n",
-    "tag_only_df = pd.DataFrame(list(tag_only_pairs), columns=['user_idx', 'movie_idx'])\n",
-    "tag_only_df['rating'] = np.mean([0.5, 5.0])\n",
-    "\n",
-    "# Gộp lại làm train data mới\n",
-    "train_tags_df = pd.concat([explicit_df, tag_only_df], ignore_index=True)"
+    "print(f\"Số lượng tương tác thêm vào từ implicit feedback: {len(additional_df)}\")\n",
+    "print(f\"Kích thước train_df gốc: {len(train_df)} -> sau khi thêm: {len(train_tags_df)}\")"
    ]
   },
   {
@@ -1416,8 +1410,8 @@
     "\n",
     "# Tạo trainset và testset từ DataFrame\n",
     "trainset = Dataset.load_from_df(train_tags_df[['user_idx', 'movie_idx', 'rating']], reader=reader).build_full_trainset()\n",
-    "valset = list(val_df_[['user_idx', 'movie_idx', 'rating']].itertuples(index=False, name=None))\n",
-    "testset = list(test_df_[['user_idx', 'movie_idx', 'rating']].itertuples(index=False, name=None))"
+    "valset = list(val_df[['user_idx', 'movie_idx', 'rating']].itertuples(index=False, name=None))\n",
+    "testset = list(test_df[['user_idx', 'movie_idx', 'rating']].itertuples(index=False, name=None))"
    ]
   },
   {
@@ -1436,7 +1430,7 @@
    "outputs": [],
    "source": [
     "# ======= Khởi tạo và huấn luyện mô hình =======\n",
-    "model_svdpp = SVDpp(n_epochs=5, n_factors=50, verbose=True)\n",
+    "model_svdpp = SVDpp(n_epochs=30, n_factors=50)\n",
     "model_svdpp.fit(trainset)"
    ]
   },
