clean code phase 2 - term

--- a/advanced_SVD/hybrid_model.ipynb
+++ b/advanced_SVD/hybrid_model.ipynb
@@ -145,21 +145,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6d984630",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings = pd.read_csv(f\"{DATA_DIR}/ratings.csv\")\n",
-    "movies = pd.read_csv(f\"{DATA_DIR}/movies.csv\")\n",
+    "# ratings = pd.read_csv(f\"{DATA_DIR}/ratings.csv\")\n",
+    "# movies = pd.read_csv(f\"{DATA_DIR}/movies.csv\")\n",
     "\n",
-    "genome_scores = pd.read_csv(f\"{DATA_DIR}/genome-scores.csv\")\n",
-    "genome_tags = pd.read_csv(f\"{DATA_DIR}/genome-tags.csv\")"
+    "# genome_scores = pd.read_csv(f\"{DATA_DIR}/genome-scores.csv\")\n",
+    "# genome_tags = pd.read_csv(f\"{DATA_DIR}/genome-tags.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cfc4deea",
    "metadata": {},
    "outputs": [
@@ -279,12 +279,18 @@
    "source": [
     "df = pd.merge(ratings, movies, on='movieId')\n",
     "print(f\"Original dataset: {len(df):,} ratings | {df['userId'].nunique():,} users | {df['movieId'].nunique():,} movies\")\n",
-    "display(df.head())"
+    "display(df.head())\n",
+    "\n",
+    "'''\n",
+    "total movies \n",
+    "rated movie - 59k\n",
+    "in trong tập tag in movie\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c8faf674",
    "metadata": {},
    "outputs": [
@@ -401,12 +407,12 @@
     }
    ],
    "source": [
-    "# Encode\n",
-    "user_encoder = LabelEncoder()\n",
-    "user_encoder.fit(df['userId'])\n",
-    "df['user_idx'] = user_encoder.transform(df['userId'])\n",
+    "# # Encode\n",
+    "# user_encoder = LabelEncoder()\n",
+    "# user_encoder.fit(df['userId'])\n",
+    "# df['user_idx'] = user_encoder.transform(df['userId'])\n",
     "\n",
-    "display(df.head())"
+    "# display(df.head())"
    ]
   },
   {
@@ -2129,13 +2135,14 @@
     "    rmse_test_cosine, mae_test_cosine = eval_cosine(test_df, profiles_cosine)\n",
     "\n",
     "    # Ridge \n",
-    "    mat_sparse = mat if sparse.issparse(mat) else sparse.csr_matrix(mat)\n",
-    "    desc_df_sparse_loop = pd.DataFrame.sparse.from_spmatrix(\n",
-    "        mat_sparse, index=describe_matrix.index\n",
+    "    desc_df = pd.DataFrame(\n",
+    "        data=normalize(sparse.csr_matrix(mat), axis=1, copy=False),     \n",
+    "        index=describe_matrix.index\n",
     "    )\n",
-    "    profiles_ridge = build_user_profiles_ridge(train_df, desc_df_sparse_loop)\n",
-    "    rmse_val_ridge, mae_val_ridge = eval_ridge(val_df, profiles_ridge, desc_df_sparse_loop)\n",
-    "    rmse_test_ridge, mae_test_ridge = eval_ridge(test_df, profiles_ridge, desc_df_sparse_loop)\n",
+    "\n",
+    "    profiles_ridge = build_user_profiles_ridge(train_df, desc_df)\n",
+    "    rmse_val_ridge, mae_val_ridge = eval_ridge(val_df, profiles_ridge, desc_df)\n",
+    "    rmse_test_ridge, mae_test_ridge = eval_ridge(test_df, profiles_ridge, desc_df)\n",
     "\n",
     "    results[name] = {\n",
     "    'cosine': (rmse_val_cosine, mae_val_cosine, rmse_test_cosine, mae_test_cosine),\n",
@@ -2167,11 +2174,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# descriptions_df = pd.DataFrame(\n",
-    "#     data=feature_matrices[best_method_ridge].toarray()                       \n",
-    "#     index=describe_matrix.index\n",
-    "# )\n",
-    "\n",
     "mat_sparse_best = (feature_matrices[best_method_ridge]\n",
     "                   if sparse.issparse(feature_matrices[best_method_ridge])\n",
     "                   else sparse.csr_matrix(feature_matrices[best_method_ridge]))  \n",
