--- a/advanced_SVD/phase2.ipynb
+++ b/advanced_SVD/phase2.ipynb
@@ -18,22 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "969f5269",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'surprise'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m sample\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mean_absolute_error, mean_squared_error\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msurprise\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SVD, SVDpp, Dataset, Reader, accuracy\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpickle\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'surprise'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SVD\n",
     "import os\n",
@@ -86,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a78684c5",
    "metadata": {},
    "outputs": [],
@@ -117,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "247d87a7",
    "metadata": {},
    "outputs": [],
@@ -140,10 +128,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0e5703ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original dataset : 25,000,095 ratings | 162,541 users | 59,047 movies (after merge)\n",
+      "Total movies      : 62,423\n",
+      "Rated movies      : 59,047\n",
+      "Movies in tags    : 45,251\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>296</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1147880044</td>\n",
+       "      <td>Pulp Fiction (1994)</td>\n",
+       "      <td>Comedy|Crime|Drama|Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>306</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1147868817</td>\n",
+       "      <td>Three Colors: Red (Trois couleurs: Rouge) (1994)</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>307</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1147868828</td>\n",
+       "      <td>Three Colors: Blue (Trois couleurs: Bleu) (1993)</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>665</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1147878820</td>\n",
+       "      <td>Underground (1995)</td>\n",
+       "      <td>Comedy|Drama|War</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>899</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1147868510</td>\n",
+       "      <td>Singin' in the Rain (1952)</td>\n",
+       "      <td>Comedy|Musical|Romance</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userId  movieId  rating   timestamp  \\\n",
+       "0       1      296     5.0  1147880044   \n",
+       "1       1      306     3.5  1147868817   \n",
+       "2       1      307     5.0  1147868828   \n",
+       "3       1      665     5.0  1147878820   \n",
+       "4       1      899     3.5  1147868510   \n",
+       "\n",
+       "                                              title  \\\n",
+       "0                               Pulp Fiction (1994)   \n",
+       "1  Three Colors: Red (Trois couleurs: Rouge) (1994)   \n",
+       "2  Three Colors: Blue (Trois couleurs: Bleu) (1993)   \n",
+       "3                                Underground (1995)   \n",
+       "4                        Singin' in the Rain (1952)   \n",
+       "\n",
+       "                        genres  \n",
+       "0  Comedy|Crime|Drama|Thriller  \n",
+       "1                        Drama  \n",
+       "2                        Drama  \n",
+       "3             Comedy|Drama|War  \n",
+       "4       Comedy|Musical|Romance  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Nối bảng 'ratings' với 'movies' để lấy tiêu đề phim\n",
     "df = pd.merge(ratings, movies, on='movieId')\n",
@@ -172,10 +276,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "008b828f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset: 25,000,095 ratings | 162,541 users | 59,047 movies\n"
+     ]
+    }
+   ],
    "source": [
     "user_encoder = LabelEncoder()\n",
     "user_encoder.fit(df['userId'])\n",
@@ -1473,7 +1585,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"{DATA_DIR}/svdpp_model.pkl\", 'wb') as f:\n",
+    "with open(f\"{DATA_DIR}/model_svdpp_cus.pkl\", 'wb') as f:\n",
     "    pickle.dump(model_svdpp_cus, f)"
    ]
   },
@@ -1604,8 +1716,19 @@
    "outputs": [],
    "source": [
     "# ======= Khởi tạo và huấn luyện mô hình =======\n",
-    "model_svdpp = SVDpp(n_epochs=30, n_factors=50)\n",
-    "model_svdpp.fit(trainset)"
+    "model_svdpp_sur = SVDpp(n_epochs=30, n_factors=50)\n",
+    "model_svdpp_sur.fit(trainset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc58a868",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f\"{DATA_DIR}/model_svdpp_sur.pkl\", 'wb') as f:\n",
+    "    pickle.dump(model_svdpp_sur, f)"
    ]
   },
   {
@@ -1628,9 +1751,9 @@
    ],
    "source": [
     "# ======= Đánh giá trên tập train, validation và test =======\n",
-    "train_predictions = model_svdpp.test(trainset.build_testset()[:10000])\n",
-    "val_predictions = model_svdpp.test(valset)\n",
-    "test_predictions = model_svdpp.test(testset)\n",
+    "train_predictions = model_svdpp_sur.test(trainset.build_testset()[:10000])\n",
+    "val_predictions = model_svdpp_sur.test(valset)\n",
+    "test_predictions = model_svdpp_sur.test(testset)\n",
     "print(\n",
     "    f\"\\nRMSE | MAE\\n\"\n",
     "    f\"Train: {accuracy.rmse(train_predictions, verbose=False):.4f} | {accuracy.mae(train_predictions, verbose=False):.4f}\\n\"\n",
