add comment svd++ implement

--- a/advanced_SVD/phase2.ipynb
+++ b/advanced_SVD/phase2.ipynb
@@ -671,7 +671,7 @@
     "    n_epochs=35,\n",
     ")\n",
     "model_funksvd_custom.fit(train_df, val_df, patience=3)\n",
-    "model_funksvd_custom.save(\"checkpoints/funksvd_best.npz\")   "
+    "model_funksvd_custom.save(f\"{DATA_DIR}/funksvd_best.npz\")   "
    ]
   },
   {
@@ -863,6 +863,17 @@
    "source": [
     "model_funksvd = SurpriseFunkSVD(n_factors=50, n_epochs=35)\n",
     "model_funksvd.fit(train_df) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b93aeab9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f\"{DATA_DIR}/model_funksvd.pkl\", 'wb') as f:\n",
+    "    pickle.dump(model_funksvd, f)"
    ]
   },
   {
@@ -1398,6 +1409,38 @@
     "# Cập nhật implicit_feedback_sampled bằng cách thêm các item từ tags\n",
     "for row in tags_sampled.itertuples():\n",
     "    implicit_feedback_sampled[row.user_idx].add(row.movie_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9b8f6ce7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Chọn full =========================\n",
+    "\n",
+    "# # RATING\n",
+    "# # Tạo N(u): tập các phim mà user đã tương tác (rating) trong train\n",
+    "# implicit_feedback = defaultdict(set)\n",
+    "\n",
+    "# for row in train_df.itertuples():\n",
+    "#     implicit_feedback[row.user_idx].add(row.movie_idx)\n",
+    "\n",
+    "# # FILE TAGS\n",
+    "# # Giữ lại user và movie đã có trong encoder\n",
+    "# tags_filtered = tags[\n",
+    "#     tags['userId'].isin(user_encoder.classes_) &\n",
+    "#     tags['movieId'].isin(movie_encoder.classes_)\n",
+    "# ].copy()\n",
+    "\n",
+    "# # Bước 2: Mã hóa user và movie\n",
+    "# tags_filtered['user_idx'] = user_encoder.transform(tags_filtered['userId'])\n",
+    "# tags_filtered['movie_idx'] = movie_encoder.transform(tags_filtered['movieId'])\n",
+    "\n",
+    "# # Cập nhật thêm vào implicit_feedback từ tags\n",
+    "# for row in tags_filtered.itertuples():\n",
+    "#     implicit_feedback[row.user_idx].add(row.movie_idx)"
    ]
   },
   {
