--- a/advanced_SVD/phase2.ipynb
+++ b/advanced_SVD/phase2.ipynb
@@ -18,42 +18,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "969f5269",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SVD\n",
-    "import os\n",
-    "import math\n",
-    "import random\n",
-    "import pandas as pd\n",
-    "from collections import Counter\n",
-    "import matplotlib.pyplot as plt\n",
-    "from collections import defaultdict\n",
-    "from random import sample\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "import os, math, random, gc, time, pickle\n",
+    "from collections import Counter, defaultdict\n",
     "\n",
-    "from surprise import SVD, SVDpp, Dataset, Reader, accuracy\n",
-    "\n",
-    "import time\n",
-    "import pickle\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "from tqdm.auto import tqdm\n",
     "from scipy import sparse\n",
     "\n",
-    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler, normalize\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.feature_selection import SelectKBest, chi2\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.linear_model import Ridge\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.preprocessing import normalize\n",
     "\n",
-    "import itertools\n",
-    "import gc"
+    "from surprise import SVD, SVDpp, Dataset, Reader, accuracy\n"
    ]
   },
   {
@@ -74,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a78684c5",
    "metadata": {},
    "outputs": [],
@@ -84,15 +72,10 @@
     "random.seed(SEED)\n",
     "\n",
     "DATA_DIR = \"../data\"\n",
-    "Z_THRESHOLD = 0.0\n",
-    "RATING_MIN = 0.5\n",
-    "RATING_MAX = 5.0\n",
-    "TEST_SIZE = 0.10\n",
-    "VAL_SIZE = 0.10\n",
-    "SAMPLE_USER = 72313\n",
-    "TOP_N = 10\n",
-    "SHOW_ROWS = 50\n",
-    "N_FEATURES_FS = 300"
+    "Z_THRESHOLD = 0.0    # z-score >= 0 ⇒ user \"thích\" phim\n",
+    "RATING_MIN, RATING_MAX = 0.5, 5.0\n",
+    "TEST_SIZE, VAL_SIZE = 0.10, 0.10\n",
+    "N_FEATURES_FS = 300     # Số lượng features sẽ lấy khi feature selection"
    ]
   },
   {
@@ -128,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0e5703ba",
    "metadata": {},
    "outputs": [
@@ -249,7 +232,7 @@
     }
    ],
    "source": [
-    "# Nối bảng 'ratings' với 'movies' để lấy tiêu đề phim\n",
+    "# Merge để có title ngay trong ratings\n",
     "df = pd.merge(ratings, movies, on='movieId')\n",
     "\n",
     "total_movies  = movies[\"movieId\"].nunique()          # tổng số phim trong bảng movies\n",
@@ -276,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "008b828f",
    "metadata": {},
    "outputs": [
@@ -289,6 +272,7 @@
     }
    ],
    "source": [
+    "# Encode userId và movieId thành chỉ số liên tục từ 0 để cho indexing ma trận\n",
     "user_encoder = LabelEncoder()\n",
     "user_encoder.fit(df['userId'])\n",
     "df['user_idx'] = user_encoder.transform(df['userId'])\n",
@@ -318,6 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Nếu chưa có thì tạo folder lưu file chia train/test/val\n",
     "split_dir = os.path.join(DATA_DIR, \"splits\")\n",
     "os.makedirs(split_dir, exist_ok=True)\n",
     "\n",
@@ -341,6 +326,7 @@
     }
    ],
    "source": [
+    "# Nếu đã có file thì chỉ cần load không cần split \n",
     "if os.path.exists(train_path) and os.path.exists(val_path) and os.path.exists(test_path):\n",
     "    print(\"Loading cached train/val/test splits...\")\n",
     "    train_df = pd.read_csv(train_path)\n",
@@ -369,6 +355,7 @@
     "\n",
     "    train_df, val_df, test_df = train_val_test_split_func(df)\n",
     "    \n",
+    "    # Lưu lại file để lần sau load nhanh hơn\n",
     "    train_df.to_csv(train_path, index=False)\n",
     "    val_df.to_csv(val_path, index=False)\n",
     "    test_df.to_csv(test_path, index=False)\n",
@@ -861,6 +848,7 @@
     }
    ],
    "source": [
+    "# Khởi tạo và train model SVD với thư viện surprise\n",
     "model_funksvd = SurpriseFunkSVD(n_factors=50, n_epochs=35)\n",
     "model_funksvd.fit(train_df) "
    ]
@@ -872,6 +860,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Lưu model ra file để dùng lại sau này (không cần train lại)\n",
     "with open(f\"{DATA_DIR}/model_funksvd.pkl\", 'wb') as f:\n",
     "    pickle.dump(model_funksvd, f)"
    ]
@@ -891,7 +880,7 @@
     }
    ],
    "source": [
-    "# Dự đoán hàng loạt\n",
+    "# Dự đoán rating trên tập val\n",
     "preds = model_funksvd.predict_batch(val_df[\"user_idx\"], val_df[\"movie_idx\"])\n",
     "val_df[\"predicted_rating\"] = preds"
    ]
@@ -1852,7 +1841,7 @@
     "        \"val_mae\": val_mae\n",
     "    })\n",
     "\n",
-    "    # Lưu mô hình tốt nhất\n",
+    "    # Nếu đây là model tốt nhất từ đầu đến giờ, lưu lại model và config\n",
     "    if val_rmse < best_rmse:\n",
     "        if best_model:\n",
     "            del best_model\n",
@@ -1865,7 +1854,7 @@
     "        del model\n",
     "        gc.collect()\n",
     "\n",
-    "# Chuyển thành DataFrame và lưu\n",
+    "# Chuyển kết quả grid search thành DataFrame và lưu ra file\n",
     "results_df = pd.DataFrame(results)\n",
     "results_df.to_csv(f\"{DATA_DIR}/gridsearch_funksvd_results.csv\", index=False)\n",
     "\n",
@@ -1927,14 +1916,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Folder cache lưu hồ sơ người dùng cho content-based\n",
     "PROFILE_CACHE_DIR = \"./cache_profiles\"\n",
     "os.makedirs(PROFILE_CACHE_DIR, exist_ok=True)\n",
     "\n",
+    "# Hàm save user profiles \n",
     "def save_profiles(profiles_dict, method_name):\n",
     "    file_path = os.path.join(PROFILE_CACHE_DIR, f\"profiles_{method_name}.pkl\")\n",
     "    with open(file_path, \"wb\") as f:\n",
     "        pickle.dump(profiles_dict, f)\n",
     "\n",
+    "# Hàm load user profiles \n",
     "def load_profiles(method_name):\n",
     "    file_path = os.path.join(PROFILE_CACHE_DIR, f\"profiles_{method_name}.pkl\")\n",
     "    if os.path.exists(file_path):\n",
@@ -1952,10 +1944,12 @@
    "source": [
     "GENOME_CACHE_PATH = os.path.join(PROFILE_CACHE_DIR, \"genome_csr_best.pkl\") \n",
     "\n",
+    "# Hàm savema trận genome CSR \n",
     "def save_genome_csr(csr):  \n",
     "    with open(GENOME_CACHE_PATH, \"wb\") as f:\n",
     "        pickle.dump(csr, f)\n",
     "\n",
+    "# Hàm load ma trận genome CSR \n",
     "def load_genome_csr():  \n",
     "    if os.path.exists(GENOME_CACHE_PATH):\n",
     "        with open(GENOME_CACHE_PATH, \"rb\") as f:\n",
@@ -1986,7 +1980,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scale rating ở tập train\n",
+    "# Tính mean và std rating cho từng user trong tập train (để scale)\n",
     "train_user_stats = train_df.groupby(\"userId\")[\"rating\"].agg(\n",
     "        [\"mean\", \"std\"]).rename(columns={\"mean\": \"mu\", \"std\": \"sigma\"})"
    ]
@@ -2010,18 +2004,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hàm thêm cột z-score vào DataFrame \n",
     "def add_z_scores(df, user_stats):\n",
     "    df_with_stats = df.merge(user_stats, on=\"userId\", how=\"left\")\n",
     "\n",
     "    ratings_mean = train_df[\"rating\"].mean()\n",
     "    ratings_std = train_df[\"rating\"].std()\n",
     "\n",
+    "    # Nếu user chưa từng rating, fill bằng mean của all data\n",
     "    df_with_stats[\"mu\"] = df_with_stats[\"mu\"].fillna(ratings_mean)\n",
     "    df_with_stats[\"sigma\"] = df_with_stats[\"sigma\"].fillna(ratings_std)\n",
+    "    \n",
+    "    # Tính z-score = (x - mu) / sigma (tránh chia 0)\n",
     "    df_with_stats[\"rating_z\"] = (df_with_stats[\"rating\"] - df_with_stats[\"mu\"]) / df_with_stats[\"sigma\"].replace(0, 1e-6)\n",
     "    \n",
     "    return df_with_stats\n",
     "\n",
+    "# Apply cho train rồi thực hiện trên cả tập val và test\n",
     "train_df = add_z_scores(train_df, train_user_stats)\n",
     "val_df = add_z_scores(val_df, train_user_stats)\n",
     "test_df = add_z_scores(test_df, train_user_stats)"
@@ -2042,7 +2041,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Gộp genome scores và genome tags lại với nhau (theo tagId)\n",
     "merged_genome = pd.merge(genome_scores, genome_tags, on='tagId', how='left')\n",
+    "\n",
+    "# Pivot để mỗi dòng là movieId, mỗi cột là tag, giá trị là relevance\n",
     "genome_matrix = merged_genome.pivot(index='movieId', columns='tag', values='relevance').fillna(0)"
    ]
   },
@@ -2061,6 +2063,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Vector hóa genres (thể loại phim) dùng TF-IDF cho từng phim\n",
     "tfidf = TfidfVectorizer(token_pattern=r'[^|]+')\n",
     "genres_tfidf = tfidf.fit_transform(movies['genres'])\n",
     "genres_df = pd.DataFrame(\n",
@@ -2087,13 +2090,13 @@
    "source": [
     "all_movies = pd.Index(sorted(set(genome_matrix.index).union(genres_df.index)))\n",
     "\n",
-    "# Phim thiếu genome\n",
+    "# Fill 0 cho phim thiếu genome\n",
     "missing_genome = all_movies.difference(genome_matrix.index)\n",
     "if len(missing_genome):\n",
     "    zero_genome = pd.DataFrame(0, index=missing_genome, columns=genome_matrix.columns)\n",
     "    genome_matrix = pd.concat([genome_matrix, zero_genome])\n",
     "\n",
-    "# Phim thiếu genres\n",
+    "# Fill 0 cho phim thiếu genres\n",
     "missing_genre = all_movies.difference(genres_df.index)\n",
     "if len(missing_genre):\n",
     "    zero_genre = pd.DataFrame(0, index=missing_genre, columns=genres_df.columns)\n",
@@ -2107,7 +2110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# chỉnh lại index\n",
+    "# chỉnh lại index giống nhau khi gộp 2 ma trận\n",
     "genome_matrix = genome_matrix.loc[all_movies]\n",
     "genres_df = genres_df.loc[all_movies]"
    ]
@@ -2152,6 +2155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Tính mean rating từng phim trên tập train, chuyển rating thành class để chọn đặc trưng phân loại\n",
     "movie_avg_train = train_df.groupby(\"movieId\")[\"rating\"].mean()\n",
     "\n",
     "def rating_to_class(rating):\n",
@@ -2162,6 +2166,7 @@
     "    else:\n",
     "        return 2  # rating cao\n",
     "\n",
+    "# Chỉ lấy những phim vừa có đặc trưng, vừa có rating trung bình\n",
     "train_movies_fs = [m for m in movie_avg_train.index if m in describe_matrix.index]"
    ]
   },
@@ -2176,7 +2181,7 @@
     "y_fs = movie_avg_train.loc[train_movies_fs].apply(rating_to_class).values\n",
     "k = min(N_FEATURES_FS, X_fs.shape[1])\n",
     "\n",
-    "# tạo 4 ma trận đặc trưng giám sát\n",
+    "# Tạo các ma trận đặc trưng theo 4 phương pháp: chi2, entropy, gini, std deviation\n",
     "feature_matrices = {}\n",
     "\n",
     "# 1. Chi-squared\n",
@@ -2229,6 +2234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Tạo mapping từ movieId sang dòng trong describe_matrix\n",
     "movieId2row = {mid: i for i, mid in enumerate(describe_matrix.index.values)}\n",
     "row2movieId = describe_matrix.index.values"
    ]
@@ -2240,6 +2246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hàm build user profile cho phương pháp cosine similarity\n",
     "def build_user_profiles_sim(ratings_df, rating_col=\"rating_z\", threshold=Z_THRESHOLD, eps=1e-8):\n",
     "    profiles = {}\n",
     "    good = ratings_df.loc[ratings_df[rating_col] >= threshold, [\"userId\", \"movieId\", rating_col]]\n",
@@ -2264,6 +2271,7 @@
     "\n",
     "    return profiles\n",
     "\n",
+    "# Hàm đánh giá cosine similarity\n",
     "def eval_cosine(df_eval, profiles):\n",
     "    df_eval = df_eval[df_eval.movieId.isin(movieId2row)]\n",
     "    y_true, y_pred = [], []\n",
@@ -2278,6 +2286,7 @@
     "        y_pred.append(pred)\n",
     "    return math.sqrt(mean_squared_error(y_true, y_pred)), mean_absolute_error(y_true, y_pred)\n",
     "\n",
+    "# Hàm thử nghiệm cosine cho từng phương pháp chọn đặc trưng\n",
     "def test_cosine_method(mat, method_name):\n",
     "    global genome_csr, profiles\n",
     "    genome_csr = normalize(sparse.csr_matrix(mat), axis=1, copy=False)\n",
@@ -2307,12 +2316,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hàm lấy danh sách phim và rating của 1 user\n",
     "def get_items_rated_by_user(ratings_df, user_id):\n",
     "    user_df = ratings_df[ratings_df['userId'] == user_id]\n",
     "    movies_list = user_df['movieId'].values\n",
     "    ratings_list = user_df['rating'].values\n",
     "    return movies_list, ratings_list\n",
     "\n",
+    "# Hàm train mô hình Ridge Regression cho từng user (build user profiles với phương pháp Ridge Regression)\n",
     "def build_user_profiles_ridge(ratings_df, descriptions_df, min_ratings_for_grid=20, verbose=True):\n",
     "    start = time.time()\n",
     "    profiles = {}\n",
@@ -2357,6 +2368,7 @@
     "        print(f'Training time: {(time.time() - start):.4f}s')\n",
     "    return profiles\n",
     "\n",
+    "# Hàm dự đoán rating cho 1 user với nhiều phim\n",
     "def predict_rating_ridge(user_id, movie_ids, profiles, descriptions_df, normalize_rating=True):\n",
     "    if user_id not in profiles:\n",
     "        return np.array([])\n",
@@ -2376,7 +2388,7 @@
     "    return pred_rating, valid_movie_ids\n",
     "\n",
     "\n",
-    "\n",
+    "# Hàm evaluate cho ridge\n",
     "def eval_ridge(ratings_df, profiles, descriptions, user_id=None):\n",
     "    if user_id is None:\n",
     "        users_ids = ratings_df['userId'].unique()\n",
@@ -2415,13 +2427,13 @@
     "for name, mat in feature_matrices.items():\n",
     "    print(f\"Đánh giá feature matrix: {name}\")\n",
     "\n",
-    "    # Cosine \n",
+    "    # Cosine: chuẩn hóa ma trận, build profile, đánh giá trên val/test\n",
     "    genome_csr = normalize(sparse.csr_matrix(mat), axis=1, copy=False)\n",
     "    profiles_cosine = build_user_profiles_sim(train_df) \n",
     "    rmse_val_cosine, mae_val_cosine = eval_cosine(val_df, profiles_cosine)\n",
     "    rmse_test_cosine, mae_test_cosine = eval_cosine(test_df, profiles_cosine)\n",
     "\n",
-    "    # Ridge \n",
+    "    # Ridge: build DataFrame từ sparse matrix, build profile, đánh giá \n",
     "    desc_df = pd.DataFrame(\n",
     "        data=normalize(sparse.csr_matrix(mat), axis=1, copy=False),     \n",
     "        index=describe_matrix.index\n",
@@ -2447,6 +2459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Tìm ra phương pháp chọn đặc trưng tốt nhất cho cosine và ridge\n",
     "best_method_cosine = min(results, key=lambda n: results[n]['cosine'][0])   \n",
     "best_method_ridge  = min(results, key=lambda n: results[n]['ridge'][0])    \n",
     "\n",
@@ -2489,6 +2502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Lưu và load lại hồ sơ user cho cosine/ridge tốt nhất để dùng lại (tránh train lại nhiều lần)\n",
     "profiles_cosine_best = load_profiles(f\"{best_method_cosine}_cosine\")\n",
     "if profiles_cosine_best is None:\n",
     "    profiles_cosine_best = build_user_profiles_sim(train_df)\n",
@@ -2531,13 +2545,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hàm gợi ý top-k phim cho 1 user bằng phương pháp hybrid: alpha * SVD + (1-alpha) * content-based\n",
     "def hybrid_recommend_topk(user_id, all_movies, ratings_df, cb_profiles, cb_descriptions, svd_model, alpha=0.5, top_k=10):\n",
-    "    # Lấy các phim user đã xem\n",
+    "    # Lấy các phim user đã xem để không gợi ý lại\n",
     "    seen_movie_ids, _ = get_items_rated_by_user(ratings_df, user_id)\n",
     "    all_movie_ids = set(all_movies['movieId'])\n",
     "    unseen_movie_ids = list(all_movie_ids - set(seen_movie_ids))\n",
     "\n",
-    "    # Gọi content-based\n",
+    "    # Dự đoán điểm bằng content-based (ridge)\n",
     "    cb_preds = predict_rating_ridge(user_id, unseen_movie_ids, cb_profiles, cb_descriptions, normalize=False)\n",
     "    # gọi FunkSVD\n",
     "    svd_preds = svd_model.predict_batch([user_id] * len(unseen_movie_ids), unseen_movie_ids)\n",
