--- a/advanced_SVD/phase2.ipynb
+++ b/advanced_SVD/phase2.ipynb
@@ -1805,10 +1805,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9df2e375",
+   "id": "fc9e6f2d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing params: {'n_factors': 50, 'lr_all': 0.005, 'reg_all': 0.02, 'n_epochs': 20}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.005, 'reg_all': 0.02, 'n_epochs': 30}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.005, 'reg_all': 0.02, 'n_epochs': 50}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.005, 'reg_all': 0.1, 'n_epochs': 20}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.005, 'reg_all': 0.1, 'n_epochs': 30}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.005, 'reg_all': 0.1, 'n_epochs': 50}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.007, 'reg_all': 0.02, 'n_epochs': 20}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.007, 'reg_all': 0.02, 'n_epochs': 30}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.007, 'reg_all': 0.02, 'n_epochs': 50}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.007, 'reg_all': 0.1, 'n_epochs': 20}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.007, 'reg_all': 0.1, 'n_epochs': 30}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.007, 'reg_all': 0.1, 'n_epochs': 50}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.01, 'reg_all': 0.02, 'n_epochs': 20}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.01, 'reg_all': 0.02, 'n_epochs': 30}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.01, 'reg_all': 0.02, 'n_epochs': 50}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.01, 'reg_all': 0.1, 'n_epochs': 20}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.01, 'reg_all': 0.1, 'n_epochs': 30}\n",
+      "Testing params: {'n_factors': 50, 'lr_all': 0.01, 'reg_all': 0.1, 'n_epochs': 50}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.005, 'reg_all': 0.02, 'n_epochs': 20}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.005, 'reg_all': 0.02, 'n_epochs': 30}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.005, 'reg_all': 0.02, 'n_epochs': 50}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.005, 'reg_all': 0.1, 'n_epochs': 20}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.005, 'reg_all': 0.1, 'n_epochs': 30}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.005, 'reg_all': 0.1, 'n_epochs': 50}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.007, 'reg_all': 0.02, 'n_epochs': 20}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.007, 'reg_all': 0.02, 'n_epochs': 30}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.007, 'reg_all': 0.02, 'n_epochs': 50}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.007, 'reg_all': 0.1, 'n_epochs': 20}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.007, 'reg_all': 0.1, 'n_epochs': 30}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.007, 'reg_all': 0.1, 'n_epochs': 50}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.01, 'reg_all': 0.02, 'n_epochs': 20}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.01, 'reg_all': 0.02, 'n_epochs': 30}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.01, 'reg_all': 0.02, 'n_epochs': 50}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.01, 'reg_all': 0.1, 'n_epochs': 20}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.01, 'reg_all': 0.1, 'n_epochs': 30}\n",
+      "Testing params: {'n_factors': 100, 'lr_all': 0.01, 'reg_all': 0.1, 'n_epochs': 50}\n",
+      "\n",
+      "Best Parameters:  {'n_factors': 50, 'lr_all': 0.005, 'reg_all': 0.02, 'n_epochs': 30}\n",
+      "Best Validation RMSE: 0.7731\n"
+     ]
+    }
+   ],
    "source": [
+    "import itertools\n",
+    "import gc\n",
+    "import pandas as pd\n",
+    "\n",
     "results = []\n",
     "best_rmse = float('inf')\n",
     "best_model = None\n",
@@ -1841,7 +1891,7 @@
     "        \"val_mae\": val_mae\n",
     "    })\n",
     "\n",
-    "    # Nếu đây là model tốt nhất từ đầu đến giờ, lưu lại model và config\n",
+    "    # Lưu mô hình tốt nhất\n",
     "    if val_rmse < best_rmse:\n",
     "        if best_model:\n",
     "            del best_model\n",
@@ -1849,14 +1899,14 @@
     "        best_rmse = val_rmse\n",
     "        best_params = config\n",
     "        best_model = model\n",
-    "        best_model.save(f\"{DATA_DIR}/best_model_funksvd.pkl\")\n",
+    "        best_model.save(\"/kaggle/working/best_model_funksvd.pkl\")\n",
     "    else:\n",
     "        del model\n",
     "        gc.collect()\n",
     "\n",
-    "# Chuyển kết quả grid search thành DataFrame và lưu ra file\n",
+    "# Chuyển thành DataFrame và lưu\n",
     "results_df = pd.DataFrame(results)\n",
-    "results_df.to_csv(f\"{DATA_DIR}/gridsearch_funksvd_results.csv\", index=False)\n",
+    "results_df.to_csv(\"/kaggle/working/gridsearch_funksvd_results.csv\", index=False)\n",
     "\n",
     "print(\"\\nBest Parameters: \", best_params)\n",
     "print(f\"Best Validation RMSE: {best_rmse:.4f}\")"
@@ -1865,12 +1915,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c142774",
+   "id": "4528ba4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧪 Test RMSE: 0.7728 | Test MAE: 0.5823\n"
+     ]
+    }
+   ],
    "source": [
     "test_rmse, test_mae = evaluate(test_df, best_model)\n",
-    "print(f\"Test RMSE: {test_rmse:.4f} | Test MAE: {test_mae:.4f}\")"
+    "print(f\"🧪 Test RMSE: {test_rmse:.4f} | Test MAE: {test_mae:.4f}\")\n"
    ]
   },
   {
