update comment EDA

--- a/baseline_SVD/phase1.ipynb
+++ b/baseline_SVD/phase1.ipynb
@@ -611,7 +611,7 @@
     "\n",
     "- Giai đoạn 2010–2014 nhìn chung khá \"lặng sóng\", màu nhạt đồng đều – phản ánh mức độ tương tác thấp kéo dài.\n",
     "\n",
-    "**Kết luận:** Heatmap giúp phát hiện và quan sát rõ rành hơn các giai đoạn đột biến số lượt đánh giá của người dùng."
+    "**Kết luận:** Heatmap giúp phát hiện và quan sát rõ ràng hơn các giai đoạn đột biến số lượt đánh giá của người dùng."
    ]
   },
   {
