--- a/final.ipynb
+++ b/final.ipynb
@@ -10,25 +10,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns \n",
+    "import seaborn as sns\n",
+    "import os, math, random, gc, time, pickle\n",
     "\n",
-    "# For \n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
-    "# For baseline SVD algorithm\n",
     "from scipy.sparse import csr_matrix, coo_matrix\n",
     "from scipy.sparse.linalg import eigsh\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
-    "\n",
-    "import os, math, random, gc, time, pickle\n",
-    "from collections import Counter, defaultdict\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tqdm.auto import tqdm\n",
     "from scipy import sparse\n",
+    "from collections import Counter, defaultdict\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
@@ -37,13 +26,12 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.linear_model import Ridge\n",
-    "\n",
-    "# from surprise import SVD, SVDpp, Dataset, Reader, accuracy\n"
+    "# from surprise import SVD, SVDpp, Dataset, Reader, accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5b8be021",
    "metadata": {},
    "outputs": [],
@@ -58,7 +46,7 @@
     "TEST_SIZE, VAL_SIZE = 0.10, 0.10\n",
     "N_FEATURES_FS = 300 # Số lượng features sẽ lấy khi feature selection\n",
     "\n",
-    "USER_ID = 95133\n"
+    "USER_ID = 95133"
    ]
   },
   {
@@ -89,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "40dd20b2",
    "metadata": {},
    "outputs": [
@@ -211,7 +199,6 @@
     }
    ],
    "source": [
-    "print(\"THỐNG KÊ DỮ LIỆU\")\n",
     "total_movies  = movies[\"movieId\"].nunique()          # tổng số phim trong bảng movies\n",
     "rated_movies  = ratings[\"movieId\"].nunique()         # phim đã có ít nhất 1 rating\n",
     "tagged_movies = tags[\"movieId\"].nunique()            # phim xuất hiện trong bảng tags\n",
@@ -625,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "257292b8",
    "metadata": {},
    "outputs": [
@@ -646,7 +633,7 @@
     "\n",
     "# Tính độ thưa (sparsity) của ma trận ratings\n",
     "sparsity = 1 - n_ratings / (n_users * n_movies)\n",
-    "print(f\"\\nĐộ thưa của ma trận: {sparsity:.4f} ({n_ratings} ratings / {n_users * n_movies} possible ratings)\")"
+    "print(f\"\\nSparsity of matrix: {sparsity:.4f} ({n_ratings} ratings / {n_users * n_movies} possible ratings)\")"
    ]
   },
   {
