--- a/final.ipynb
+++ b/final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7e4a81dd",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5b8be021",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "40dd20b2",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "THỐNG KÊ DỮ LIỆU\n",
       "Original dataset : 25,000,095 ratings | 162,541 users | 59,047 movies (after merge)\n",
       "Total movies      : 62,423\n",
       "Rated movies      : 59,047\n",
@@ -600,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "270cb129",
    "metadata": {},
    "outputs": [],
@@ -612,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "257292b8",
    "metadata": {},
    "outputs": [
@@ -621,7 +620,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Độ thưa của ma trận: 0.9974 (25000095 ratings / 9597558427 possible ratings)\n"
+      "Sparsity of matrix: 0.9974 (25000095 ratings / 9597558427 possible ratings)\n"
      ]
     }
    ],
@@ -3450,7 +3449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "label-studio",
    "language": "python",
    "name": "python3"
   },
@@ -3464,7 +3463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
